# master-thesis

./: Main.py  main.py  masterproject.py  pyproject.toml
src/: DataCreate.py  evaluation.py  tfmodel.py
